Max zoom issue fix (out of boundary)

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -11,5 +11,6 @@
     border: 4px solid red;
     background-color:burlywood;
     /* color:cornflowerblue; */
+    overflow: hidden;
 
 }
